Including additional ideas  challenges as per reviewer comments

--- a/Data Wrangle OpenStreetMap Data.ipynb
+++ b/Data Wrangle OpenStreetMap Data.ipynb
@@ -373,7 +373,7 @@
    "source": [
     "### Non-Uniformity in City Names\n",
     "\n",
-    "Due to crowd-sourced entries, city names in map data is not conistent. NYC is consist of many big boroughs due to that many places I noticed city name is replaces with neighbourhood names and borough names. Some places city names are misspelled or abbreviated. During my initial load to MongoDB I found below examples:\n",
+    "Due to crowd-sourced entries, city names in map data is not conistent. NYC is consist of many big boroughs due to that many places I noticed city name is replaced with neighbourhood names and borough names. Some places city names are misspelled or abbreviated. During my initial load to MongoDB I found below examples:\n",
     "\n",
     "{'Manhattan NYC', 'Brooklyn, New York', 'new York', 'Queens, NY', 'NY', 'Manhattan', 'New York NY', 'Waterbury', 'Bowery Bay',\n",
     " 'NEW YORK CITY'}\n",
@@ -1387,10 +1387,14 @@
     "Many more crowd-sourced apps can be developed using OSM data, which in turn will help OSM data quality also.\n",
     "We can create social networking street parking app, where users can geo-tag different street parking all over the city. Once data is more mature, it can be developed to be more advance app which can provide real time parking spots update.\n",
     "\n",
+    "#### Challenges and Potential Issues\n",
+    "One of the biggest challenge in implementing these ideas and OSM data is quality of data. With idea of gamification and competetion we can attract users and developers to create data. Even with all cleaning we can perform, still data is crowd sourced. And this data still can have human errors. It can be human biased and misleading. Maintaing authencity, correctness of data can be very time consuming and tedious.\n",
+    "\n",
+    "Parking app and more such apps can only be developed using this data, once its more mature and complete. The completeness and maturity of data can take lot of time and effort, which is high cost in app developement world. Using alternatives like Google Map API, Bing map, Leaflet can provide more complete data.\n",
     "\n",
     "### Conclusion\n",
     "Jersey City and the neighbouring areas data needs cleaning and mapping. NYCBuidlings data has created a nice skeleton, which can be leveraged to make this data more useful.\n",
-    "In current state, it is difficult to gain any intelligence from this data."
+    "In current state, it is difficult to gain much benefit from this map data."
    ]
   }
  ],
